- finally got the envelope for the drone working properly so it has a slower attack and release. 	- added key, mode, sequence number, octaves to play, play direction override, 	repeat mode, and tempo to the saved parameters 	- changed play direction override controls to three buttons instead of one to make 	it faster and easier to control. Now you don't need to turn on reversal and wait for 	it to start playing in reverse to be able to lock it to reverse play mode. 	- added a repeat button instead of requiring pressing the play button while it is playing to toggle 	- added symbols to buttons for shuffle, loop, arrows, etc. 	- fixed bug where playing the scale in stylo mode would play the last played note at the start. 	- added more keyboard controls: 1,2 to change octaves_to_play, p to play scale or switch looping mode, 	d to toggle on drone, space bar to start scale playing if or pause and resume if it is alread playing. 	Put debugging and save chart behind a shift key requirement. 	- changed m key to toggle the relative/parallel mode switch instead of switching between major and minor, 	which was not very useful. 	- allowed for changing octaves_to_play while scale is playing; 	changing sequence settings while a sequence is playing will restart it. 	- adjusted save chart text positions to work properly on condensed chart. 	- Added black background to full_chart to give it some dividing lines 	- made it so that playing the scale sequence will highlight 	 the currently playing note. In order to avoid having to redraw everything, 	 it saves the chart into a graphics buffer using better_get when it is updated, 	 so only the highlighted note needs to be drawn. 	 This highlighted a bug in some of the sequences when playing in reverse, so I corrected that issue. 	- added a favicon 	- made button and select fonts a bit bolder for readability on mobile, 	- adjusted sizes and positions of select, sliders, radios, etc. 	- changed split holes to show a dividing line when open.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ button {
 		color: #444444;
     font-family: sans-serif;
     font-size: 1rem;
-    line-height: 1;
+    font-weight: 600;
+    line-height: 1.25;
     cursor: pointer;
     text-align: center;
     transition: background 250ms ease-in-out, transform 150ms ease;
@@ -52,7 +53,7 @@ button:active {
   -webkit-appearance: none;  /* Override default CSS styles */
   appearance: none;
   width: 100%; /* Full-width */
-  height: 3em; /* Specified height */
+  height: min(5vw, 10vh);
   background: #3393d3;
   outline: none; /* Remove outline */
   opacity: 0.87; /* Set transparency (for mouse-over effects on hover) */
@@ -70,49 +71,57 @@ button:active {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
-  width: 2.3em; /* Set a specific slider handle width */
-  height: 2.8em; /* Slider handle height */
+  width: min(5vw, 12vh); /* Set a specific slider handle width */
+  height: min(5vw, 10vh); /* Slider handle height */
   background: #04AA2D; /* Green background */
   cursor: pointer; /* Cursor on hover */
 	border-radius: 0.5em
 }
 
 .slider::-moz-range-thumb {
-  width: 2.3em; /* Set a specific slider handle width */
-  height: 2.8em; /* Slider handle height */
+  width: 5vw; /* Set a specific slider handle width */
+  height: min(5vw, 10vh); /* Slider handle height */
   background: #04AA2D; /* Green background */
   cursor: pointer; /* Cursor on hover */
 	border-radius: 0.5em
 }
 
 input[type=radio] {
-    border: 8px;
-    width: 25%;
-    height: 2em;
-/* 	  transform: translateX(1.6em); */
+  width: 25%;
+  height: min(3vw, 6vh);
+  vertical-align: bottom;
+  transform: translateX(0.25vw)
 }
 
 select {
-  -webkit-appearance: button;
-  -moz-appearance: button;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* -webkit-appearance: button;
+  -moz-appearance: button; */
   -webkit-user-select: none;
   -moz-user-select: none;
-  -webkit-padding-end: 2px;
-  -moz-padding-end: 2px;
-  -webkit-padding-start: 2px;
-  -moz-padding-start: 2px;
+  -webkit-padding-end: 1vw;
+  -moz-padding-end: 1vw;
+  -webkit-padding-start: 1vw;
+  -moz-padding-start: 1vw;
   background-color: #E5E5FF; /* Fallback color if gradients are not supported */
   border: 1px solid #AAA;
-  border-radius: 2px;
+  border-radius: 3px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   color: #555;
   font-size: inherit;
+  font-weight: 600;
   margin: 0;
   overflow: hidden;
   padding-top: 0px;
   padding-bottom: 0px;
   text-overflow: ellipsis;
   white-space: nowrap;
-  text-indent: 4px;
   text-align: left;
+  /* width: fit-content; */
+}
+
+select option, select optgroup { 
+  font-weight: 600;
 }
